# sarm

./: .gitignore  main.py  pyproject.toml
examples/: clip_inference.py
src/sarm/config/: sarm_config.py
src/sarm/dataset/: data_utils.py  gap_dataset.py
src/sarm/datasets/: gap_dataset.py
src/sarm/model/: clip.py  reward_sarm.py  sarm.py
src/sarm/scripts/: label_dataset.py  train.py
src/sarm/utils/: convert_clip.py
tests/: conftest.py  test_calculate_rewards.py  test_clip_inference.py  test_clip_text_equivalence.py  test_clip_vit_b32_equivalence.py  test_dataset.py  test_gap_dataset.py  test_train.py
